--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,9 @@
         "php": "^8.0"
     },
     "require-dev": {
+        "codeigniter4/devkit": "^1.0",
         "codeigniter4/framework": "^4.1",
-        "codeigniter/coding-standard": "^1.5",
-        "nexusphp/cs-config": "^3.6",
-        "nexusphp/tachycardia": "^1.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.0",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.3",
-        "rector/rector": "0.14.8",
-        "roave/security-advisories": "dev-latest",
-        "vimeo/psalm": "^4.22"
+        "rector/rector": "0.14.8"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
