--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,6 +25,7 @@
         </include>
         <exclude>
             <directory suffix=".php">./src/Config</directory>
+            <file>./src/Debug/Toolbar.php</file>
         </exclude>
         <report>
             <clover outputFile="build/phpunit/clover.xml"/>
