--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests"
+            "Tests\\": "tests",
+            "Tests\\Support\\": "tests/_support"
         }
     },
     "config": {
