--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,19 @@ theme:
   favicon: assets/favicon.ico
   icon:
     repo: fontawesome/brands/github
+  palette:
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 
 extra:
   homepage: https://michalsn.github.io/codeigniter-htmx
