--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     },
     "require-dev": {
         "codeigniter4/devkit": "^1.0",
-        "codeigniter4/framework": "^4.1",
-        "rector/rector": "0.18.5"
+        "codeigniter4/framework": "^4.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
