--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ extra_javascript:
 nav:
   - Home: index.md
   - Installation: installation.md
+  - Configuration: configuration.md
   - Error handling: error_handling.md
   - View fragments: view_fragments.md
   - IncomingReqeuest: incoming_request.md
