--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,33 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.5/phpunit.xsd"
-         bootstrap="vendor/codeigniter4/framework/system/Test/bootstrap.php"
-         backupGlobals="false"
-         beStrictAboutCoversAnnotation="true"
-         beStrictAboutOutputDuringTests="true"
-         beStrictAboutTodoAnnotatedTests="true"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         executionOrder="random"
-         failOnRisky="true"
-         failOnWarning="true"
-         stopOnError="false"
-         stopOnFailure="false"
-         stopOnIncomplete="false"
-         stopOnSkipped="false"
-         verbose="true">
-
-    <coverage includeUncoveredFiles="true" processUncoveredFiles="true">
-        <include>
-            <directory suffix=".php">./src/</directory>
-        </include>
-        <exclude>
-            <directory suffix=".php">./src/Config</directory>
-            <file>./src/Commands/HtmxPublish.php</file>
-            <file>./src/Debug/Toolbar.php</file>
-        </exclude>
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
+    bootstrap="vendor/codeigniter4/framework/system/Test/bootstrap.php"
+    backupGlobals="false"
+    beStrictAboutOutputDuringTests="true"
+    colors="true"
+    executionOrder="random"
+    failOnRisky="true"
+    failOnWarning="true"
+    stopOnError="false"
+    stopOnFailure="false"
+    stopOnIncomplete="false"
+    stopOnSkipped="false"
+    cacheDirectory=".phpunit.cache"
+    beStrictAboutCoverageMetadata="true">
+    <coverage includeUncoveredFiles="true">
         <report>
             <clover outputFile="build/phpunit/clover.xml"/>
             <html outputDirectory="build/phpunit/html"/>
@@ -36,59 +23,34 @@
             <xml outputDirectory="build/phpunit/xml-coverage"/>
         </report>
     </coverage>
-
     <testsuites>
         <testsuite name="main">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
-
     <extensions>
-        <extension class="Nexus\PHPUnit\Extension\Tachycardia">
-            <arguments>
-                <array>
-                    <element key="timeLimit">
-                        <double>0.50</double>
-                    </element>
-                    <element key="reportable">
-                        <integer>30</integer>
-                    </element>
-                    <element key="precision">
-                        <integer>2</integer>
-                    </element>
-                    <element key="collectBare">
-                        <boolean>true</boolean>
-                    </element>
-                    <element key="tabulate">
-                        <boolean>true</boolean>
-                    </element>
-                </array>
-            </arguments>
-        </extension>
+        <bootstrap class="Nexus\PHPUnit\Tachycardia\TachycardiaExtension">
+            <parameter name="time-limit" value="0.50"/>
+            <parameter name="report-count" value="30"/>
+            <parameter name="format" value="table"/>
+        </bootstrap>
     </extensions>
-
     <logging>
         <testdoxHtml outputFile="build/phpunit/testdox.html"/>
         <testdoxText outputFile="build/phpunit/testdox.txt"/>
         <junit outputFile="build/phpunit/junit.xml"/>
     </logging>
-
     <php>
         <env name="XDEBUG_MODE" value="coverage"/>
         <server name="app.baseURL" value="https://example.com/"/>
-
         <!-- Directory containing phpunit.xml -->
         <const name="HOMEPATH" value="./"/>
-
         <!-- Directory containing the Paths config file -->
         <const name="CONFIGPATH" value="vendor/codeigniter4/framework/app/Config/"/>
-
         <!-- Directory containing the front controller (index.php) -->
         <const name="PUBLICPATH" value="./public/"/>
-
         <!-- https://getcomposer.org/xdebug -->
         <env name="COMPOSER_DISABLE_XDEBUG_WARN" value="1"/>
-
         <!-- Database configuration -->
         <env name="database.tests.strictOn" value="true"/>
         <!-- Uncomment to use alternate testing database configuration
@@ -100,4 +62,13 @@
         <env name="database.tests.DBPrefix" value="tests_"/>
         -->
     </php>
+    <source>
+        <include>
+            <directory suffix=".php">./src/</directory>
+        </include>
+        <exclude>
+            <directory suffix=".php">./src/Config</directory>
+            <directory suffix=".php">./src/Views</directory>
+        </exclude>
+    </source>
 </phpunit>
