--- a/.github/workflows/deptrac.yml
+++ b/.github/workflows/deptrac.yml
@@ -32,7 +32,6 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          tools: phive
           extensions: intl, json, mbstring, xml
           coverage: none
         env:
@@ -68,7 +67,5 @@ jobs:
 
       - name: Trace dependencies
         run: |
-          sudo phive --no-progress install --global --trust-gpg-keys B8F640134AB1782E,A98E898BB53EB748 qossmic/deptrac
-          deptrac analyze --cache-file=build/deptrac.cache
-        env:
-          GITHUB_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          composer require --dev qossmic/deptrac-shim
+          vendor/bin/deptrac analyze --cache-file=build/deptrac.cache
