--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -60,7 +60,14 @@ jobs:
             composer update --no-progress --no-interaction --prefer-dist --optimize-autoloader
           fi
 
+      - name: Rector Cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/rector
+          key: ${{ runner.os }}-rector-${{ github.run_id }}
+          restore-keys: ${{ runner.os }}-rector-
+
+      - run: mkdir -p /tmp/rector
+
       - name: Analyze for refactoring
-        run: |
-          composer global require --dev rector/rector:^0.15.1
-          rector process --dry-run --no-progress-bar
+        run: vendor/bin/rector process --dry-run --no-progress-bar
