--- a/.github/workflows/deptrac.yml
+++ b/.github/workflows/deptrac.yml
@@ -32,7 +32,6 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          tools: phive
           extensions: intl, json, mbstring, xml
           coverage: none
         env:
@@ -42,7 +41,7 @@ jobs:
         run: echo "COMPOSER_CACHE_FILES_DIR=$(composer config cache-files-dir)" >> $GITHUB_ENV
 
       - name: Cache composer dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ${{ env.COMPOSER_CACHE_FILES_DIR }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}-${{ hashFiles('**/composer.lock') }}
@@ -52,7 +51,7 @@ jobs:
         run: mkdir -p build/
 
       - name: Cache Deptrac results
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: build
           key: ${{ runner.os }}-deptrac-${{ github.sha }}
@@ -68,7 +67,5 @@ jobs:
 
       - name: Trace dependencies
         run: |
-          sudo phive --no-progress install --global --trust-gpg-keys B8F640134AB1782E,A98E898BB53EB748 qossmic/deptrac
-          deptrac analyze --cache-file=build/deptrac.cache
-        env:
-          GITHUB_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          composer require --dev qossmic/deptrac-shim
+          vendor/bin/deptrac analyze --cache-file=build/deptrac.cache
