--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,5 +55,6 @@ nav:
   - IncomingReqeuest: incoming_request.md
   - Response: response.md
   - RedirectResponse: redirect_response.md
+  - HTML Formatter: html_formatter.md
   - Debug Toolbar: debug_toolbar.md
   - Troubleshooting: troubleshooting.md
