Move tests cache

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
     stopOnFailure="false"
     stopOnIncomplete="false"
     stopOnSkipped="false"
-    cacheDirectory=".phpunit.cache"
+    cacheDirectory="build/.phpunit.cache"
     beStrictAboutCoverageMetadata="true">
     <coverage includeUncoveredFiles="true">
         <report>
